# GRAIL

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: docs.yml
configs/gen_2dhoi/: apple_pickup_table_aligned_single.yaml  apple_pickup_table_single.yaml  manipulation.yaml  pickup_ground.yaml  pickup_table.yaml  selected_gen_stairs_4.yaml  selected_robocasa_pickup_table_4.yaml  selected_terrain_4.yaml  sitting.yaml  terrain_curbs.yaml  terrain_slope.yaml  terrain_stairs.yaml  terrain_stairs_quickstart_skip_refine.yaml
configs/gen_3d/: chairs.yaml  chairs_200.yaml  chairs_extra_140.yaml  example_objects.yaml  gen_stairs_10.yaml
configs/objects/: chair_sitting.yaml  comasset.yaml  robocasa.yaml  robocasa_apple_table_aligned.yaml  selected_gen_stairs_4.yaml  selected_robocasa_pickup_table_4.yaml  selected_terrain_4.yaml  sitting_sitting003_200.yaml  sitting_sitting003_all.yaml  terrain_curbs.yaml  terrain_gen_stairs.yaml  terrain_slopes.yaml  terrain_syn_stairs.yaml  terrain_syn_stairs_v1.yaml
configs/recon_4dhoi/: loco_smplx.yaml  loco_smplx_quickstart_mask.yaml  loco_soma.yaml  manip_smplx.yaml  manip_soma.yaml  pickup_smplx.yaml  pickup_soma.yaml
configs/scenes/: apple_pickup_table_aligned.yaml  default.yaml
data/g1_smplx/: g1_skeleton_meta.pkl  g1_smplx_param.npz  gmr_smplx_to_g1.json
docs/: README.md  requirements.txt
docs/source/: conf.py  data_export.md  gen_2dhoi.md  gen_3d_assets.md  index.rst  installation.md  quick_start.md  recon_4dhoi.md  retargeting.md  tracking.md  visualization.md  web_visualizer.md
grail/: __init__.py
grail/adapters/: __init__.py  depth.py  foundation_pose.py  gem_smpl.py  gem_soma.py  gmr.py  kling.py  openai_api.py  sam.py  wilor.py
grail/cli/: gen2d.py  recon4d.py
grail/constants/: __init__.py  image.py
grail/core/: __init__.py  config.py  contact_label.py  dataset.py  io.py  logging.py  paths.py  sdf.py  torch_utils.py  types.py  video.py
grail/data_export/: export_successful_rollouts.py  merge_exports.py  select_top_checkpoints.py  summarize_phase1_sr.py
grail/models/: __init__.py  g1_smplx_human.py  g1_smplx_model.py  human_model.py  smplx_constants.py  smplx_model.py  smplx_vert_segmentation_contact.json  soma_model.py
grail/optimization/: __init__.py  data_types.py  evaluator.py  hoi_optimizer.py  interaction.py  loss_computer.py  loss_terms.py  visualizer.py
grail/pipelines/: __init__.py  (+5 more)
(+177 files in other folders)
