[metadata]
name = grail
version = 0.1.0
description = GRAIL: Generating Humanoid Loco-Manipulation from 3D Assets and Video Priors
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    opencv-python
    Pillow
    imageio
    ffmpeg-python
    trimesh
    open3d
    pyyaml
    omegaconf
    einops
    tqdm
    smplx
    roma
    torch
    torchvision
    hydra-core
    hydra-zen
    rich
    openai
    configer
    natsort

[options.extras_require]
dev =
    pytest
    ruff
    pre-commit
    black

[options.packages.find]
include =
    grail
    grail.*
